--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -1,10 +1,6 @@
 name: Crawl Workflow
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
   build:
