test: updated nltk lib

--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -26,6 +26,9 @@ jobs:
         source .env/bin/activate
         python3 -m src.phantom --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 18
 
+        python3 -m nltk.downloader stopwords
+        python3 -m nltk.downloader punkt
+
         python3 -m src.phantom_indexing
 
         echo "Crawling completed"
