--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -36,7 +36,7 @@ jobs:
     - name: test search Engine server
       run: |
         source .env/bin/activate
-        python3 -m phantom.py &
-        sleep 10  # give Flask some time to start
+        python3 phantom.py &
+        sleep 10
         curl -f http://localhost:5000/
         echo "Flask test completed"
