--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -24,12 +24,12 @@ jobs:
     - name: Test crawler and indexer
       run: |
         source .env/bin/activate
-        python3 -m src.phantom --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 6
+        python3 -m phantom.phantom --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 6
 
         python3 -m nltk.downloader stopwords
         python3 -m nltk.downloader punkt
 
-        python3 -m src.phantom_indexing
+        python3 -m phantom.phantom_indexing
 
         echo "Crawling completed"
       
