--- a/.github/workflows/server_checks.yaml
+++ b/.github/workflows/server_checks.yaml
@@ -1,4 +1,4 @@
-name: Crawler Test
+name: Gunicorn Test
 
 on: [push]
 
@@ -20,15 +20,20 @@ jobs:
         python -m venv .env
         source .env/bin/activate
         pip install -r requirements.txt
-
-    - name: Test crawler and indexer
+      
+    - name: test search Engine server
       run: |
         source .env/bin/activate
-        python3 -m phantom.phantom --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 6
+        python3 phantom.py &
+        sleep 10
+        curl -f http://localhost:5000/
+        echo "Flask test completed"
+    
+    - name: Test Gunicorn server
+      run: |
+        source .env/bin/activate
+        gunicorn -w 4 phantom:app
+        sleep 10
+        curl -f http://localhost:8000/
+        echo "Gunicorn test completed"
 
-        python3 -m nltk.downloader stopwords
-        python3 -m nltk.downloader punkt
-
-        python3 -m phantom.phantom_indexing
-
-        echo "Crawling completed"
