--- a/.github/workflows/server_checks.yaml
+++ b/.github/workflows/server_checks.yaml
@@ -1,4 +1,4 @@
-name: Gunicorn Test
+name: Server Test
 
 on: [push]
 
@@ -21,19 +21,19 @@ jobs:
         source .env/bin/activate
         pip install -r requirements.txt
       
-    - name: test search Engine server
+    - name: Local Flask server Test
       run: |
         source .env/bin/activate
-        python3 phantom.py &
-        sleep 10
+        python3 server.py &
+        sleep 5
         curl -f http://localhost:5000/
         echo "Flask test completed"
     
     - name: Test Gunicorn server
       run: |
         source .env/bin/activate
-        gunicorn -w 4 phantom:app
-        sleep 10
+        gunicorn -w 4 server:app
+        sleep 5
         curl -f http://localhost:8000/
         echo "Gunicorn test completed"
 
