--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -35,5 +35,6 @@ jobs:
     
     - name: Unittests
       run: |
+        pip install -r requirements.txt
         python3 -m unittest discover -s tests
         echo "Unit test done"
