chore: major_bump (#14)
* style: style fix

fix: storage rollback

fix: storage rollback

* refactor: updated parser to handle edge

refactor: update

* refactor: moved the files to appropriate root

* fix: removed unused url_parser()

* test: added test for utils

* test: added unittest for distrib and core

* test: added unittest in crawl.yaml

* test: test fix

* feat: changed the content from json to string

* feat: use tf-idf on title

* feat: added status for every chunk iter

* feat: UI updated

* chore: updated demo

* fix: empty title error fixed

--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -1,4 +1,4 @@
-name: Crawler Test
+name: Unit Test
 
 on: [push]
 
@@ -24,11 +24,17 @@ jobs:
     - name: Test crawler and indexer
       run: |
         source .env/bin/activate
-        python3 -m phantom.phantom --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 6
+        python3 -m phantom.main --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 6
 
         python3 -m nltk.downloader stopwords
         python3 -m nltk.downloader punkt
 
-        python3 -m phantom.phantom_indexing
+        python3 -m phantom.core.indexer
 
         echo "Crawling completed"
+    
+    - name: Unittests
+      run: |
+        pip install -r requirements.txt
+        python3 -m unittest discover -s tests
+        echo "Unit test done"
