chore: updated url

--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -20,5 +20,5 @@ jobs:
 
     - name: Call deploy hook
       env:
-          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-      run: curl -X POST ${{ secrets.DEPLOY_HOOK_URL }}
+        DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+      run: curl $DEPLOY_HOOK_URL
