--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -21,7 +21,11 @@ jobs:
         source .env/bin/activate
         pip install -r requirements.txt
 
-    - name: Test crawler and indexer
+    - name: Test crawler and indexer\
+      env:
+        SAVE_CRAWLS: 0
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
       run: |
         source .env/bin/activate
         python3 -m phantom.main --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 2
