fix: reduce the limits for test

--- a/.github/workflows/crawl.yaml
+++ b/.github/workflows/crawl.yaml
@@ -26,6 +26,8 @@ jobs:
         SAVE_CRAWLS: 0
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+        CHUNK_SIZE: 50
+        CHUNK_LIMIT: 50
       run: |
         source .env/bin/activate
         python3 -m phantom.main --num_threads 2 --urls "https://github.com/AnsahMohammad" "https://github.com/AnsahMohammad" --sleep 2
