--- a/.github/workflows/server_checks.yaml
+++ b/.github/workflows/server_checks.yaml
@@ -29,6 +29,9 @@ jobs:
         bash build.sh 6
       
     - name: Local Flask server Test
+      env:
+          REMOTE_DB: 0
+
       run: |
         source .env/bin/activate
         python3 server.py &
@@ -37,6 +40,8 @@ jobs:
         echo "Flask test completed"
     
     - name: Test Gunicorn server
+      env:
+          REMOTE_DB: 0
       run: |
         source .env/bin/activate
         gunicorn -w 4 server:app &
